# shawn-prompt-parsing-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  main.py  pyproject.toml
src/api/: app.py  dependencies.py
src/api/routes/: llm_route.py  logs.py  metrics.py
src/api/v1/: llm.py  logs.py  metrics.py  prompts.py  sources.py
src/config/: config.py
src/infrastructure/: aws_storage.py  celery_app.py  click_house.py  database.py  llm_service.py  models.py  prompt.py  redis_service.py  shared.py  taskiq_app.py
