[project]
name = "shawn-prompt-parsing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
