[project]
name = "shawn-prompt-parsing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "asynch>=0.3.0",
    "celery[redis]>=5.3.1",
    "clickhouse-connect>=0.9.2",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "markdown2>=2.5.4",
    "markdownify>=1.2.0",
    "pandas>=2.3.3",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "selectolax>=0.4.0",
    "sqlmodel>=0.0.24",
    "taskiq>=0.11.18",
    "taskiq-fastapi>=0.3.5",
    "taskiq-redis>=1.1.0",
    "uvicorn>=0.35.0",
]
